# DAW-Basic

./: .gitignore  CMakeLists.txt  DAWBASIC.sln  dawbasic.cpp  main.cpp  readme.md
DAWBASIC/: DAWBASIC.vcxproj  DAWBASIC.vcxproj.filters  basic_statement.h  dawbasic.cpp  dawbasic.h  main.cpp  mostlyimmutable.h
include/: basic_statement.h  dawbasic.h  mostlyimmutable.h
src/: dawbasic.cpp  main.cpp
tests/: gosub.bas
